Fix Chat Button Clipping

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -16,6 +16,7 @@
 
     &__chat {
         height: 0px;
+        margin-top: -15px !important;
         overflow: visible;
     }
 }
